website/styles/main.styl
headerBackgroundColor = #fafafa
headerFontColor = #333
headerLinkColor = #333
borderColor = #ddd
backgroundColor = #ffffff
linkColor= #005580

width= 65%
minWidth= 600px
maxWidth= 1800px


vendor(prop, args)
    -webkit-{prop} args
    -moz-{prop} args
    -ms-{prop} args
    -o-{prop} args
    {prop} args

box-shadow()
	vendor('box-shadow', arguments)
text-shadow()
	vendor('text-shadow', arguments)
opacity()
	vendor('opacity', arguments)

background-linear-gradient(from, to)
	background-image: -webkit-linear-gradient(from, to)
	background-image: -moz-linear-gradient(from, to)
	background-image: -ms-linear-gradient(from, to)
	background-image: -o-linear-gradient(from, to)
	background-image: linear-gradient(from, to)

html
	font: "Helvetica Neue", "Lucida Grande", "Lucida Sans Unicode", Helvetica, Arial, sans-serif !important
	font-size: 0.9em
	background: darken(backgroundColor, 3%) 
	margin: 0 auto
	min-width: 725px
	max-width: 900px
	width: 80%

body
	background: #fff
	margin-top: 20px
	margin-bottom: 20px
	border: 1px solid borderColor
	padding: 1em
	position: relative

a
	color: linkColor

a:hover
	color: lighten(linkColor, 20%)

h1 
	text-align: center
	text-shadow 1px 1px 2px rgba(0, 0, 0, 0.4)

nav
	margin-top: 0.5em
	font-size: 1.3em
	text-align: center

	a
		color: headerLinkColor
		text-decoration: none
		padding: 0.5em 1em
		text-shadow 0 1px 1px rgba(0,0,0,0.5);

section
	width: 700px
	margin: 0 auto

.image-credits
	text-align: center
	display: block

	img
		padding: 0.2em 0.8em

	a
		img,
		img:hover
			cursor: pointer
			cursor: hand

#Video
	.vimeo	
		text-align: center

#Introduction
	margin-bottom: 3em
	h2
		text-align: center
		font-size: 1.3em
		margin-top: -0.8em
	p
		color: headerLinkColor
		font-size: 0.9em

pre
	margin-left: 1em
	font-size: 0.8em
	font-family: Monaco, Andale Mono, Consolas, Courier New, monospace

#leftLogo,
#rightLogo
	opacity 0.5
	position: absolute

#leftLogo:hover,
#rightLogo:hover
	opacity 0.7

#leftLogo
	left: 1em
	top: 1em
	

#rightLogo
	right: 2.5em
	top: 2.5em

